# hcom

./: .gitignore  Cargo.toml  Justfile  README.md  build.sh  dist-workspace.toml  gemini-extension.json  install.sh  package-lock.json  package.json  pyproject.toml
.cargo/: audit.toml
.github/: build-setup.yml
.github/workflows/: build-wheels.yml  ci.yml  post-announce-compare-link.yml  publish-pypi.yml  release.yml
scripts/: install-mock-tools.ps1  install-mock-tools.sh  typecheck.sh
skills/hcom-agent-messaging/: SKILL.md
skills/hcom-agent-messaging/references/: gotchas.md
skills/hcom-workflow-scripts/: SKILL.md
skills/hcom-workflow-scripts/references/: cross-tool-scripting.md  script-template.md
skills/hcom-workflow-scripts/references/scripts/: cross-tool-duo.sh
src/: bootstrap.rs  cli_context.rs  config.rs  db.rs  delivery.rs  identity.rs  instance_binding.rs  instance_lifecycle.rs  instance_names.rs  instances.rs  integration_spec.rs  launcher.rs  log.rs  main.rs  messages.rs  notify.rs  paths.rs  pidtrack.rs  router.rs  scripts.rs  terminal.rs  tool.rs  transcript.rs  update.rs
src/commands/: archive.rs  bundle.rs  config.rs  daemon.rs  events.rs  fork.rs  help.rs  hooks.rs  kill.rs  launch.rs  list.rs  listen.rs  mod.rs  relay.rs  reset.rs  resume.rs  run.rs  send.rs  start.rs  status.rs  stop.rs  term.rs  transcript.rs  update.rs
src/core/: bundles.rs  detail_levels.rs  filters.rs  helpers.rs  launch_status.rs  mod.rs  tips.rs
src/db/: events.rs  instances.rs  kv.rs  mod.rs  sessions.rs  subscriptions.rs
src/delivery/: antigravity.rs
src/hooks/: antigravity.rs  claude.rs  claude_args.rs  codex.rs  common.rs  family.rs  gemini.rs  mod.rs  opencode.rs  utils.rs
src/hooks/kimi/: config.rs  handlers.rs  mod.rs  tests.rs
src/hooks/omp/: handlers.rs  mod.rs  plugin.rs  tests.rs
src/omp_plugin/: hcom.ts
src/opencode_plugin/: hcom.ts
src/pty/: inject.rs  mod.rs  screen.rs  shared.rs  terminal.rs  win.rs
src/relay/: broker.rs  client.rs  control.rs  crypto.rs  mod.rs  pull.rs  push.rs  replay.rs  token.rs  worker.rs
src/scripts/bundled/: confess.sh  debate.sh  fatcow.sh
src/shared/: constants.rs  context.rs  errors.rs  mod.rs  platform.rs  terminal_presets.rs  tool_detection.rs
src/sys/: fs.rs  process.rs
src/tools/: args_common.rs  codex_args.rs  codex_preprocessing.rs  copilot_preprocessing.rs  cursor_preprocessing.rs  gemini_args.rs  launch_arg_validation.rs  mod.rs  opencode_preprocessing.rs
src/transcript/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  kimi.rs  mod.rs  opencode.rs  pi.rs  shared.rs
src/tui/: actions.rs  app.rs  commands.rs  data.rs  db.rs  input.rs  mod.rs  model.rs  rpc.rs  rpc_async.rs  state.rs  status.rs  theme.rs
src/tui/inline/: eject.rs  mod.rs
src/tui/input/: compose.rs
src/tui/render/: agents.rs  launch.rs  messages.rs  mod.rs  text.rs
tests/: cli_smoke.rs  parser_help_drift.rs  test_pty_delivery.rs  test_relay_roundtrip.rs
tests/support/: claude_mock.rs  codex_mock.rs  mod.rs
